changed reference path of iaas job

--- a/concourse_test_pipeline.yml
+++ b/concourse_test_pipeline.yml
@@ -17,5 +17,5 @@ jobs:
   - get: automate_allthethings
     trigger: false
   - task: pave_iaas_task
-    file: ((repo_home))/tasks/pave_iaas.yml
+    file: tasks/pave_iaas.yml
 
