changed path reference in pave_iaas.yml

--- a/concourse_test_pipeline.yml
+++ b/concourse_test_pipeline.yml
@@ -17,5 +17,5 @@ jobs:
   - get: automate_allthethings
     trigger: false
   - task: pave_iaas_task
-    file: tasks/pave_iaas.yml
+    file: automate_allthethings/tasks/pave_iaas.yml
 
