--- a/tasks/pave_iaas.yml
+++ b/tasks/pave_iaas.yml
@@ -8,5 +8,5 @@ image_resource:
     tag: full
 
 run:
-  path: ((repo_home))/scripts/pave_iaas.sh
+  path: automate_allthethings/scripts/pave_iaas.sh
   user: root
