Egal, was du moechtest

--- a/tasks/pave_iaas.yml
+++ b/tasks/pave_iaas.yml
@@ -11,6 +11,16 @@ run:
   path: automate_allthethings/scripts/pave_iaas.sh
   user: root
 
+params:
+  ACCESS_KEY: ((access_key_id))
+  SECRET_KEY: ((secret_access_key))
+
+
 inputs:
 - name: automate_allthethings
-  
+- name: tf_iaas
+
+
+outputs:
+- name: terraform-output-s3
+
