--- a/concourse_test_pipeline.yml
+++ b/concourse_test_pipeline.yml
@@ -9,6 +9,15 @@ resources:
   source:
     uri: https://github.com/RubyonSnow/concourse_platform_automation
 
+- name: terraform-output-s3
+ type: s3
+ source:
+   access_key_id: ((access_key_id))
+   secret_access_key: ((secret_access_key))
+   region_name: ((region))
+   bucket: ((bucket))
+   regexp: terraform.(.*).out
+
 jobs:
 - name: pave_iaas_job
   plan: 
@@ -18,4 +27,7 @@ jobs:
     trigger: false
   - task: pave_iaas_task
     file: automate_allthethings/tasks/pave_iaas.yml
+  - put: terraform-output-s3
+    params: 
+      file: terraform-output/terraform.*.out
 
